# DRL-for-parameter-extraction

./: .env  .gitignore  README.md  eehemt.ipynb  hemt_key_params.json  key_param_range.json  mypy.ini  pyproject.toml  ssh.txt  test_train.ipynb  title.md  train.py  train_dqn.py  train_ppo.py  train_ppo_tune.py  train_sac.py  train_sac_tune.py  train_tune.py
.ipynb_checkpoints/: train-checkpoint.py
data/: S25E02A025WS_25C_GMVG.csv  df_all_idvd.csv  df_all_idvg.csv  id_vgvd.csv
eehemt/: compact.vams  eehemt114-0.7.3-cp36-abi3-manylinux2010_x86_64.whl  eehemttest.va
env/: eehemt_env.py  eehemt_test.ipynb
env/eehemt/: eehemt114.va  eehemt114_2.va  eehemt114_2_new.va  eehemt114_3.va  eehemt114_final.va  soimg_20081222_yaosj.va
mtds/: helper.py
scripts/: init.sh  train_dqn.sh  train_ppo.sh  train_sac.sh  update.ps1  update.sh
test/: eehemt.ipynb  test_env.py  test_gpu.py  test_measure.ipynb  test_train.ipynb
utils/: callbacks.py  dim_reduce.py  evaluate.py  metrics.py  norm.py  plot.py  restore.py  restore_model.py
